[tool.poetry]
name = "twspace-dl"
version = "2021.11.13.0"
description = "Twitter Space archive helper script"
authors = ["Ryu1845 <ryu@tpgjbo.xyz>"]
readme = "README.md"
license = ""

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"


[tool.poetry.scripts]
twspace_dl = "twspace_dl.__main__:main"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.bumpver]
current_version = "2021.11.13.0"
version_pattern = "YYYY.MM.DD.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
    # 'current_version = "{version}"',
]
