[tool.poetry]
name = "twspace-dl"
version = "2022.3.12.1"
description = "The only tool to record Twitter spaces (yet)"
authors = ["Ryu1845 <ryu@tpgjbo.xyz>"]
readme = "README.md"
license = "GPL-2.0-only"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"


[tool.poetry.scripts]
twspace_dl = "twspace_dl.__main__:main"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.1.0"
mypy = "^0.940"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.bumpver]
current_version = "2022.3.12.1"
version_pattern = "YYYY.MM.DD.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
    # 'current_version = "{version}"',
]
